# 0.2.0

* Embed shaders;
* Update shader validation script;

# 0.1.0

* Bump minor version;
* Add basic vertex and fragment shaders;
* Update dependencies;
* Pad values in Cargo configuration file;
* Depend on libc crate;
* Set signal handlers;
* Specify versions of dependencies;
* Add shader program compiler routine;
* Add Python script for validating shaders;

# 0.0.0

* Add gitignore;
* Add cargo configuration file;
* Add changelog;

* Put main loop in its own method;
* Add copyright notice to start print;
* Fix spaces;
* Add goodbye message;