@@ -3,5 +3,5 @@
 out vec4 col;
 
 void main() {
-	col = vec4(0.7137f,0.0941f,0.2000f,1.0f);
+	col = vec4(0.7137f, 0.0941f, 0.2000f, 1.0f);
 }
