@@ -3,5 +3,5 @@
 in vec3 pos;
 
 void main() {
-	gl_Position = vec4(pos.x,pos.y,pos.z,1.0f);
+	gl_Position = vec4(pos.x, pos.y, pos.z, 1.0f);
 }
